--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:background="@color/colorPrimary"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="Start Download"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/black" />
 </android.support.design.widget.CoordinatorLayout>
